@@ -14,6 +14,8 @@ Library
 
 - webbrowser defaults to netscape.exe on OS/2 now.
 
+- Tix.ResizeHandle exposes detach_widget, hide, and show.
+
 Tools/Demos
 
 Build
